2010-02-18  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-native-retweet): Add a margin for
	wide characters.
	(twittering-favorite): Likewise.

	* twittering-mode.el (twittering-extract-timeline-spec): Delete an
	unused argument to `error'.

2010-02-18  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-current-timeline-spec): return
	nil if `twittering-current-timeline-spec-string' returns nil.
	(twittering-current-timeline-data): return nil if
	`twittering-current-timeline-spec' returns nil.
	(twittering-extract-timeline-spec): raise an error if the argument
	`str' is nil.

2010-02-17  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-extract-timeline-spec): Check STR
	is non-nil first for avoiding an error caused by `string-match'.

	* twittering-mode.el (twittering-icon-mode): Add an argument "P"
	to `interactive'.
	(twittering-scroll-mode): Likewise.
	(twittering-jojo-mode): Likewise.
	(twittering-toggle-reverse-mode): Likewise.

2010-02-16  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-timeline-spec-to-string): Replace
	`-' with `_' in symbol name `direct-messages' and
	`direct-messages-sent' to fit the parameters of twitter API.
	(twittering-extract-timeline-spec): Likewise.
	(twittering-timeline-spec-primary-p): Likewise.
	(twittering-timeline-spec-to-host-method): Likewise.
	(twittering-timeline-spec-alias): Likewise in a	comment.

2010-02-16  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-get-first-status-head): return
	nil if no statuses are rendered in the current buffer.
	(twittering-goto-first-status): go to the beginning of buffer if
	no statuses are rendered in the current buffer.
	(twittering-render-timeline): render tweets from the beginning of
	buffer if no statuses are rendered.

	* twittering-mode.el (twittering-reverse-mode): new variable for
	reverse alignment of tweets in timeline.